fixed size bug on small screens and added pics for Phase 1 done! :-)

--- a/css/pfa.css
+++ b/css/pfa.css
@@ -10,6 +10,9 @@ body {
 .margin-l20 {
     margin-left: 20px;
 }
+.margin-l60 {
+  margin-left: 60px;
+}
 .margin-l80 {
     margin-left: 80px;
 }
